rotation script and animations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Borders-Game.sln"
+    "dotnet.defaultSolution": "Borders-Game-Tools.sln"
 }
